# fastembed-axum

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
benches/: embed_main.rs  input.txt
src/: lib.rs  main.rs  state.rs
src/embedding/: README.md  mod.rs  routes.rs
src/server/: docs.rs  extractors.rs  mod.rs  run.rs  state.rs
