[package]
name = "fastembed-axum"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "embed_main"
harness = false

[dependencies]
aide = { version = "0.13.2", features = [
    "redoc",
    "scalar",
    "axum",
    "axum-extra",
    "macros",
] }
async-trait = "0.1.57"
axum = { version = "0.7.1", features = ["macros"] }
axum-extra = "0.9.0"
axum-jsonschema = { version = "0.8.0", features = ["aide"] }
axum-macros = "0.4.0"
fastembed = "3.2.0"
listenfd = "1.0.1"
schemars = { version = "0.8.10", features = ["uuid1"] }
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_json = "1.0.85"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
