[package]
name = "fastembed-axum"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "embed_main"
harness = false

[dependencies]
aide = { version = "0.15.1", features = [
    "redoc",
    "scalar",
    "axum",
    "axum-extra",
    "macros",
] }
async-trait = "0.1.57"
axum = { version = "0.8.8", features = ["macros", "json", "tokio"] }
axum-extra = "0.12.5"
axum-jsonschema = { version = "0.9.1", features = ["aide"] }
axum-macros = "0.5.0"
fastembed = "5.9.0"
listenfd = "1.0.1"
rayon = "1.9.0"
reqwest = { version = "0.11.26", features = ["blocking"] }
schemars = { version = "0.9", features = ["uuid1"] }
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_json = "1.0.85"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
